<resources>
    <string name="app_name">GeoRENT</string>
    <string name="settings">Configurações</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthDate">Data Nascimento</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_state">Estado</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_password">Senha</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading">Carregando...</string>
    <string name="show_more">Mostrar Mais</string>
    <string name="show_less">Mostrar Menos</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="edit">Editar</string>
    <string name="change_location">Alterar localização de busca</string>
    <string name="user_token">userToken</string>
    <string name="shared_preferences">MainSharedPrefs</string>
    <string name="id_user">idUser</string>

    <!-- CADASTRO USUARIO -->
    <string name="new_user">Novo Usuário</string>
    <string name="range">Área De Busca</string>
    <string name="state">Estado</string>
    <string name="locator">Locador</string>
    <string name="occupier">Locatário</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="states">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>


    <!-- RESIDÊNCIA -->
    <string name="created_residence">Residência criada!</string>
    <string name="id_residence">idResidence</string>
    <string name="title">Título</string>
    <string name="info">Informações</string>
    <string name="description">Descrição</string>
    <string name="address">Endereço</string>
    <string name="observation">Observação</string>
    <string name="preferences">Preferências</string>
    <string name="city">Cidade</string>
    <string name="location">Localização</string>
    <string name="likes">Curtidas</string>
    <string name="new_residence">Nova Residência</string>
    <string name="rent">Alugel</string>

    <!-- USUÁRIO -->
    <string name="name">Nome</string>
    <string name="date">Data</string>

    <!-- PREFERÊNCIAS -->
    <string name="sponsor">Fiador</string>
    <string name="room">Quartos</string>
    <string name="bathroom">Banheiros</string>
    <string name="vacancy">Garagem</string>
    <string name="laundry">Lavanderia</string>
    <string name="income">Renda mínima</string>
    <string name="condominium">Condomínio</string>
    <string name="child">Crianças</string>
    <string name="stay">Tempo mínimo de locação</string>
    <string name="pet">Animais de estimação</string>
    <string name="months">Meses</string>

    <!-- ERROS -->
    <string name="no_internet">Sem conexão com a Internet. Por favor, verifique sua conexão</string>
    <string name="unknown_error">Erro desconhecido</string>

    <!-- CONSTANTES DE CONEXÃO -->
    <string name="port">8000</string>
    <string name="ip">http://192.168.1.103</string>

    <!-- SERVIÇOS DO SERVIDOR -->
    <string name="user_service">user</string>
    <string name="residence_service">residence</string>
    <string name="residence_image_service">residenceImage</string>
    <string name="login">login</string>
    <string name="user_image_service">userImage</string>
    <string name="city_service">city</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_residence_register">ResidenceRegisterActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
