<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_info_black_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/primary"
            android:text="@string/info"
            android:textColor="@color/primary_text"
            android:textSize="17sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/tv_city_residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/city"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_description_residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/description"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_observation_residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/observation"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>