<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:layout_marginLeft="10dp"  android:layout_marginBottom="60dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/primary"
            android:text="@string/preferences"
            android:textColor="@color/primary_text"
            android:textSize="17sp"
            android:textStyle="normal|bold" />

    //Distancia
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/range"
            android:layout_weight="1"
            android:textColor="@color/secondary_text"
            android:textSize="15sp"
            android:textAlignment="viewStart"/>

        <TextView
            android:id="@+id/tv_range_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="0 km"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

    </LinearLayout>
    <SeekBar
        android:id="@+id/sb_distance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:progressTint="@color/accent"
        android:thumbTint="@color/accent"
        android:max="99"/>


    // Fiador
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sponsor"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchSponsor"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    //Condominio
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condominium"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchCondominium"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    //Animais
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchPet"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="textEnd" />

    </LinearLayout>

    //Criancas
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchChild"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="textEnd" />

    </LinearLayout>

    //Lavanderia
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laundry"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/laundry"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    //Garagem
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancy"
            android:textColor="@color/secondary_text"
            android:textSize="15sp"
            android:layout_weight="0.96" />

        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_vacancy"
            android:textAlignment="center" />

    </LinearLayout>

    // Quartos
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textAlignment="textEnd"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textColor="@color/secondary_text"
            android:textSize="15sp"
            android:layout_weight="0.96" />

        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_rooms"
            android:textAlignment="center" />

    </LinearLayout>

    //Banheiro

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bathroom"
            android:textColor="@color/secondary_text"
            android:textSize="15sp"
            android:layout_weight="0.96" />

        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_bathrooms"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>

</android.support.v7.widget.CardView>