<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_home_black_24dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/primary"
                android:text="@string/preferences"
                android:textColor="@color/primary_text"
                android:textSize="17sp"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_room_residence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:digits="2"
                    android:gravity="right"
                    android:text="@string/room"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sponsor"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_sponsor_residence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:digits="2"
                    android:gravity="right"
                    android:text="@string/sponsor"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_income_residence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:digits="2"
                    android:gravity="right"
                    android:text="@string/income"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stay"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_stay_residence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:digits="2"
                    android:gravity="right"
                    android:text="@string/stay"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_preferences_residence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacancy"
                        android:textColor="@color/secondary_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_vacancy_residence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:digits="2"
                        android:gravity="right"
                        android:text="@string/vacancy"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/condominium"
                        android:textColor="@color/secondary_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_condominium_residence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:digits="2"
                        android:gravity="right"
                        android:text="@string/condominium"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pet"
                        android:textColor="@color/secondary_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_pet_residence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:digits="2"
                        android:gravity="right"
                        android:text="@string/pet"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/child"
                        android:textColor="@color/secondary_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_child_residence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:digits="2"
                        android:gravity="right"
                        android:text="@string/child"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_load_preferences_residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/secondary_background"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/show_less"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.v7.widget.CardView>